Pantalla inicio, consulta general de conductores y formulario de busqueda